# libPWTClientService

./: CMakeLists.txt  README.md
.github/workflows/: build_test.yml
pwtClientService/: ClientService.cpp  ClientService.h  ClientServiceCmdTimer.h  ServiceWorker.cpp  ServiceWorker.h  serviceExport.h
pwtClientService/Resources/: version.h.in
pwtClientService/Resources/Windows/: win.rc.in
